# WDIN

./: Launch WDIN.vbs  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  publish-to-pypi.yml
src/wdin/: core.py
